[Stream] Encode packed_storage device and host tensors (#22722)
Extends the Stream passes `EncodeDeviceTensors` and `EncodeHostTensors`
to correctly handle tensors with the `packed_storage` encoding attached.

The two passes now encode tensors with the `packed_storage` attribute
the same way that `i1` tensors were encoded with the experimental
`iree-experimental-packed-i1-storage` option active.

---------

Signed-off-by: Lukas Sommer <lukas.sommer@amd.com>
Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
@@ -37,6 +37,7 @@ iree_lit_test_suite(
             "emplace_transients.mlir",
             "emplace_transients_scf.mlir",
             "encode_device_tensors.mlir",
+            "encode_device_tensors_encoding.mlir",
             "encode_device_tensors_packing.mlir",
             "encode_host_tensors.mlir",
             "encode_host_tensors_encoding.mlir",
