Add ComplexDialect to LinalgExt.
Signed-off-by: Paul Stark <paul.stark@cdprojektred.com>

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
@@ -54,6 +54,7 @@ iree_cc_library(
     MLIRArithDialect
     MLIRArithUtils
     MLIRBufferizationDialect
+    MLIRComplexDialect
     MLIRFuncDialect
     MLIRFunctionInterfaces
     MLIRIR
