Adding --iree-vm-materialize-ref-discards pass. This materializes vm.discard.refs ops on all paths where lifetime of a ref terminates. It's possible that after register allocation some of these discards are not required (as a register reuse may have already discarded them or they had been transferred) but this pass behaves conservatively and inserts them where required (splitting blocks as needed). The encoder can skip the discard ops when register allocation proves lifetime ends earlier for those reasons.

--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
@@ -17,12 +17,30 @@ iree_compiler_cc_library(
     srcs = [
         "RegisterAllocation.cpp",
         "RegisterAllocationTest.cpp",
-        "ValueLiveness.cpp",
         "ValueLivenessTest.cpp",
     ],
     hdrs = [
         "RegisterAllocation.h",
         "TestPasses.h",
+    ],
+    deps = [
+        ":ValueLiveness",
+        "//compiler/src/iree/compiler/Dialect/Util/IR",
+        "//compiler/src/iree/compiler/Dialect/VM/IR",
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:Analysis",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:Support",
+    ],
+)
+
+iree_compiler_cc_library(
+    name = "ValueLiveness",
+    srcs = [
+        "ValueLiveness.cpp",
+    ],
+    hdrs = [
         "ValueLiveness.h",
     ],
     deps = [
@@ -31,7 +49,6 @@ iree_compiler_cc_library(
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:Analysis",
         "@llvm-project//mlir:IR",
-        "@llvm-project//mlir:Pass",
         "@llvm-project//mlir:Support",
     ],
 )
