--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/CMakeLists.txt
@@ -16,17 +16,33 @@ iree_cc_library(
   HDRS
     "RegisterAllocation.h"
     "TestPasses.h"
-    "ValueLiveness.h"
   SRCS
     "RegisterAllocation.cpp"
     "RegisterAllocationTest.cpp"
-    "ValueLiveness.cpp"
     "ValueLivenessTest.cpp"
   DEPS
+    ::ValueLiveness
     LLVMSupport
     MLIRAnalysis
     MLIRIR
     MLIRPass
+    MLIRSupport
+    iree::compiler::Dialect::Util::IR
+    iree::compiler::Dialect::VM::IR
+  PUBLIC
+)
+
+iree_cc_library(
+  NAME
+    ValueLiveness
+  HDRS
+    "ValueLiveness.h"
+  SRCS
+    "ValueLiveness.cpp"
+  DEPS
+    LLVMSupport
+    MLIRAnalysis
+    MLIRIR
     MLIRSupport
     iree::compiler::Dialect::Util::IR
     iree::compiler::Dialect::VM::IR
