--- a/compiler/src/iree/compiler/Dialect/VM/Conversion/VMToEmitC/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/VM/Conversion/VMToEmitC/CMakeLists.txt
@@ -43,6 +43,7 @@ iree_cc_library(
     iree::compiler::Dialect::Util::Conversion
     iree::compiler::Dialect::Util::IR
     iree::compiler::Dialect::VM::Analysis
+    iree::compiler::Dialect::VM::Analysis::ValueLiveness
     iree::compiler::Dialect::VM::IR
     iree::compiler::Dialect::VM::Utils::CallingConvention
     iree::compiler::Dialect::VM::Utils::TypeTable
