--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
@@ -26,6 +26,7 @@ iree_compiler_cc_library(
         "DropUnusedCalls.cpp",
         "GlobalInitialization.cpp",
         "HoistInlinedRodata.cpp",
+        "MaterializeRefDiscards.cpp",
         "OrdinalAllocation.cpp",
         "Passes.cpp",
         "ReifyRodataTables.cpp",
@@ -44,6 +45,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/Util/Conversion/MemRefToUtil",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "//compiler/src/iree/compiler/Dialect/Util/Transforms",
+        "//compiler/src/iree/compiler/Dialect/VM/Analysis:ValueLiveness",
         "//compiler/src/iree/compiler/Dialect/VM/Conversion",
         "//compiler/src/iree/compiler/Dialect/VM/Conversion/ArithToVM",
         "//compiler/src/iree/compiler/Dialect/VM/Conversion/MathToVM",
@@ -56,7 +58,9 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:AffineToStandard",
         "@llvm-project//mlir:AffineTransforms",
         "@llvm-project//mlir:AffineUtils",
+        "@llvm-project//mlir:Analysis",
         "@llvm-project//mlir:ArithTransforms",
+        "@llvm-project//mlir:ControlFlowInterfaces",
         "@llvm-project//mlir:FuncDialect",
         "@llvm-project//mlir:FunctionInterfaces",
         "@llvm-project//mlir:IR",
