[Codegen] Add ConvertForallToLoopsPass
Adds the ConvertForallToLoopsPass which converts scf.forall ops to
pcf.loop ops with sequential scope.

This is the entry point for converting parallel iteration constructs
into PCF's parallel control flow representation. The pass:

- Converts scf.forall ops without mapping attributes to pcf.loop
- Linearizes/delinearizes iteration IDs based on DeviceMappingAttr
- Replaces tensor.parallel_insert_slice with pcf.write_slice
- Creates tied pcf.sref region arguments for shared output tensors

The underlying conversion pattern is exposed via convertForallToPCF()
for use with custom execution scopes.

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/CMakeLists.txt
@@ -28,6 +28,7 @@ iree_cc_library(
     "Passes.h.inc"
     "Transforms.h"
   SRCS
+    "ConvertForallToLoops.cpp"
     "Passes.cpp"
     "Transforms.cpp"
   DEPS
