[Codegen] Add FuseConsumersPass
Adds the FuseConsumersPass which fuses consumer operations into the
body of pcf.generic and pcf.loop ops.

This is a greedy pass that tiles consuming TilingInterface ops by their
iteration domains and moves them into the producer bodies. Consumed
results are replaced with writes to new allocations.

The pass supports two fusion modes:
1. Single result with multiple writes - the consumer only consumes one
   result but that result may be constructed from multiple writes
2. Multiple results with single writes - the consumer consumes multiple
   results but each result has a single write

Also adds:
- ConsumerFusionParams struct for tracking fusion parameters
- matchTilableConsumer/fuseTilableConsumer helper functions
- populatePCFDropUnusedResultPatterns for cleanup after fusion
- fuseExtractSliceIntoProducerLoop/Generic for slice extraction

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/test/BUILD.bazel
@@ -19,6 +19,7 @@ iree_lit_test_suite(
     srcs = enforce_glob(
         [
             "convert_forall_to_loops.mlir",
+            "fuse_consumers.mlir",
         ],
         include = ["*.mlir"],
     ),
