--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
@@ -36,6 +36,7 @@ iree_compiler_cc_library(
     name = "Transforms",
     srcs = [
         "ConvertForallToLoops.cpp",
+        "FuseConsumers.cpp",
         "Passes.cpp",
         "Transforms.cpp",
     ],
