[Codegen] Add FusePCFWritesPass
Adds the FusePCFWritesPass which consolidates pcf.write_slice ops in
loop bodies by fusing them with tensor.parallel_insert_slice operations
from scf.forall terminators.

When a pcf.write_slice writes to an sref that is produced by an
scf.forall result, this pass composes the offsets, sizes, and strides
of both operations to create a single write_slice inside the forall
body.

The implementation is exposed through the helper
composeWriteSliceWithParallelInsert for use within larger passes.

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/CMakeLists.txt
@@ -30,6 +30,7 @@ iree_cc_library(
   SRCS
     "ConvertForallToLoops.cpp"
     "FuseConsumers.cpp"
+    "FusePCFWrites.cpp"
     "Passes.cpp"
     "Transforms.cpp"
   DEPS
