--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
@@ -37,6 +37,7 @@ iree_compiler_cc_library(
     srcs = [
         "ConvertForallToLoops.cpp",
         "FuseConsumers.cpp",
+        "FusePCFWrites.cpp",
         "Passes.cpp",
         "Transforms.cpp",
     ],
