[Codegen] Add LowerStructuralPCFPass
Adds the LowerStructuralPCFPass which lowers structural PCF operations
to their SCF equivalents:

- pcf.generic is lowered to scf.execute_region
- pcf.loop is lowered to scf.forall
- pcf.branch_cond_return is lowered to cf.cond_br

The pass uses the scope attribute on each operation to determine how to
generate worker IDs and counts for the lowered operations.
Synchronization barriers are inserted when sync_on_return is set.

Also adds loadStructuralLoweringDependentDialects to
PCFConversionDialectInterface, allowing external dialects to register
dependent dialects needed during lowering.

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
@@ -38,6 +38,7 @@ iree_compiler_cc_library(
         "ConvertForallToLoops.cpp",
         "FuseConsumers.cpp",
         "FusePCFWrites.cpp",
+        "LowerStructuralPCF.cpp",
         "Passes.cpp",
         "Transforms.cpp",
     ],
