--- a/compiler/src/iree/compiler/Codegen/Interfaces/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Interfaces/BUILD.bazel
@@ -50,6 +50,7 @@ iree_compiler_cc_library(
         ":ProcessorOpInterfaces",
         ":UKernelOpInterface",
         ":TensorMaskingOpInterface",
+        "//compiler/src/iree/compiler/Codegen/Dialect/GPU/ExternalInterfaces:ExternalModels",
         "//compiler/src/iree/compiler/Codegen/Dialect/PCF/ExternalInterfaces:ExternalModels",
         "//compiler/src/iree/compiler/Codegen/ExternalInterfaces:ExternalModels",
         "//compiler/src/iree/compiler/Dialect/LinalgExt/TransformExtensions:LinalgExtExtensions",
