--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/test/BUILD.bazel
@@ -19,6 +19,7 @@ iree_lit_test_suite(
     srcs = enforce_glob(
         [
             "convert_forall_to_loops.mlir",
+            "convert_sref_to_memref.mlir",
             "fuse_consumers.mlir",
             "fuse_pcf_writes.mlir",
             "lower_structural_pcf.mlir",
