[Codegen] Add ResolveTokensPass
Adds the ResolveTokensPass which resolves synchronization scopes attached
to `pcf.sref` types by expanding them to their concrete representations.

The pass:
- Expands `pcf.sref<..., sync_scope>` types into a `pcf.sref` without
  sync scope plus any concrete types required by the sync scope attribute
- Sets the `sync_on_return` flag on parent `pcf.generic` or `pcf.loop`
  ops for shaped refs with `sync_on_return` scope
- Updates write operations (`pcf.write_slice`) to enqueue writes through
  the sync scope's interface methods

This pass runs before `iree-pcf-convert-sref-to-memref` and uses the
PCFConversionDialectInterface to load dependent dialects via the new
`loadTokenLoweringDependentDialects` method.

Address comments

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/test/BUILD.bazel
@@ -23,6 +23,7 @@ iree_lit_test_suite(
             "fuse_consumers.mlir",
             "fuse_pcf_writes.mlir",
             "lower_structural_pcf.mlir",
+            "resolve_tokens.mlir",
         ],
         include = ["*.mlir"],
     ),
