--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
@@ -41,6 +41,7 @@ iree_compiler_cc_library(
         "FusePCFWrites.cpp",
         "LowerStructuralPCF.cpp",
         "Passes.cpp",
+        "ResolveTokens.cpp",
         "Transforms.cpp",
     ],
     hdrs = [
