Adding YIELD/UNWIND bytecode feature bits. These allow bytecode loaders to avoid analysis for determining whether functions may yield or require unwinding (which implies a VM stack frame).

--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/test/BUILD.bazel
@@ -16,6 +16,7 @@ iree_lit_test_suite(
     name = "lit",
     srcs = enforce_glob(
         [
+            "annotate_functions.mlir",
             "deduplicate_rodata.mlir",
             "drop_empty_module_initializers.mlir",
             "drop_unused_calls.mlir",
