--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
@@ -20,6 +20,7 @@ package(
 iree_compiler_cc_library(
     name = "Transforms",
     srcs = [
+        "AnnotateFunctions.cpp",
         "Conversion.cpp",
         "DeduplicateRodata.cpp",
         "DropEmptyModuleInitializers.cpp",
