[Encoding] Propagate (Un)SetEncodingOp with dynamic encoding dims
Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Encoding/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Encoding/Utils/CMakeLists.txt
@@ -21,11 +21,13 @@ iree_cc_library(
     "Utils.cpp"
   DEPS
     LLVMSupport
+    MLIRAnalysis
     MLIRArithDialect
     MLIRIR
     MLIRInferTypeOpInterface
     MLIRLinalgDialect
     MLIRLinalgUtils
+    MLIRTensorDialect
     iree::compiler::Dialect::Encoding::IR
     iree::compiler::Dialect::LinalgExt::Utils
     iree::compiler::Dialect::Util::IR
