--- a/compiler/src/iree/compiler/Dialect/Encoding/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Encoding/Utils/BUILD.bazel
@@ -27,10 +27,12 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/LinalgExt/Utils",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:Analysis",
         "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:InferTypeOpInterface",
         "@llvm-project//mlir:LinalgDialect",
         "@llvm-project//mlir:LinalgUtils",
+        "@llvm-project//mlir:TensorDialect",
     ],
 )
