--- a/.github/workflows/pkgci_test_onnx.yml
+++ b/.github/workflows/pkgci_test_onnx.yml
@@ -46,11 +46,11 @@ jobs:
           - name: amdgpu_hip_rdna3_O3
             numprocesses: 1
             config-file: onnx_ops_gpu_hip_rdna3_O3.json
-            runs-on: [Linux, X64, gfx1100]
+            runs-on: [self-hosted, Linux, X64, gfx1100]
           - name: amdgpu_vulkan_O0
             numprocesses: 1
             config-file: onnx_ops_gpu_vulkan_O0.json
-            runs-on: [Linux, X64, rdna3]
+            runs-on: [self-hosted, Linux, X64, rdna3]
 
           # NVIDIA GPU
           # TODO(#18238): migrate to new runner cluster
