[Encoding] Add dim op and reification
Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
@@ -47,6 +47,7 @@ iree_compiler_cc_library(
         "EncodingOpInterfaces.cpp.inc",
         "EncodingOps.cpp",
         "EncodingOps.cpp.inc",
+        "EncodingPatterns.cpp",
         "EncodingTypeInterfaces.cpp.inc",
         "EncodingTypes.cpp",
         "EncodingTypes.cpp.inc",
@@ -60,6 +61,7 @@ iree_compiler_cc_library(
         "EncodingOpInterfaces.h.inc",
         "EncodingOps.h",
         "EncodingOps.h.inc",
+        "EncodingPatterns.h",
         "EncodingTypeInterfaces.h.inc",
         "EncodingTypes.h",
         "EncodingTypes.h.inc",
@@ -74,6 +76,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Utils",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:DestinationStyleOpInterface",
         "@llvm-project//mlir:DialectUtils",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:InferTypeOpInterface",
