[Encoding] Add encoding_dims flow/stream conversion
Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Stream/IR/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Stream/IR/test/CMakeLists.txt
@@ -27,6 +27,7 @@ iree_lit_test_suite(
     "context_ops.mlir"
     "executable_ops.mlir"
     "file_ops.mlir"
+    "invalid.mlir"
     "resource_folding.mlir"
     "resource_ops.mlir"
     "tensor_folding.mlir"
