Adding vm.call.yieldable op to finally fix up yieldable calls. This supports both internal and external calls that may yield and uses the new vm.yield attribute to turn all vm.call ops to transitively yieldable functions into the new yieldable form. By having the results be passed as branch arguments and the call op be a block terminator we allow for clean lifetime of the result registers, stack unwinding across modules that may be implemented in different environments (native vs bytecode vs C), and let's us simplify the normal non-yieldable call implementation for the bulk of our code.

--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/test/BUILD.bazel
@@ -17,6 +17,7 @@ iree_lit_test_suite(
     srcs = enforce_glob(
         [
             "annotate_functions.mlir",
+            "convert_to_yieldable_calls.mlir",
             "deduplicate_rodata.mlir",
             "drop_empty_module_initializers.mlir",
             "drop_unused_calls.mlir",
