--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
@@ -50,6 +50,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/VM/IR",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:Analysis",
+        "@llvm-project//mlir:ControlFlowInterfaces",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Support",
     ],
