--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/CMakeLists.txt
@@ -44,6 +44,7 @@ iree_cc_library(
   DEPS
     LLVMSupport
     MLIRAnalysis
+    MLIRControlFlowInterfaces
     MLIRIR
     MLIRSupport
     iree::compiler::Dialect::Util::IR
