--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
@@ -22,6 +22,7 @@ iree_compiler_cc_library(
     srcs = [
         "AnnotateFunctions.cpp",
         "Conversion.cpp",
+        "ConvertToYieldableCalls.cpp",
         "DeduplicateRodata.cpp",
         "DropEmptyModuleInitializers.cpp",
         "DropUnusedCalls.cpp",
