--- a/runtime/src/iree/vm/bytecode/BUILD.bazel
+++ b/runtime/src/iree/vm/bytecode/BUILD.bazel
@@ -69,6 +69,7 @@ iree_runtime_cc_test(
         "//runtime/src/iree/vm",
         "//runtime/src/iree/vm/test:all_bytecode_modules_c",
         "//runtime/src/iree/vm/test:async_bytecode_modules_c",
+        "//runtime/src/iree/vm/test:async_ops_test_module",
     ],
 )
 
