--- a/runtime/src/iree/vm/bytecode/BUILD.bazel
+++ b/runtime/src/iree/vm/bytecode/BUILD.bazel
@@ -55,11 +55,7 @@ if(IREE_BUILD_COMPILER)
 
 iree_runtime_cc_test(
     name = "module_test",
-    srcs = [
-        "dispatch_async_test.cc",
-        "dispatch_test.cc",
-        "module_test.cc",
-    ],
+    srcs = ["module_test.cc"],
     deps = [
         ":module",
         ":module_test_module_c",
@@ -67,9 +63,6 @@ iree_runtime_cc_test(
         "//runtime/src/iree/testing:gtest",
         "//runtime/src/iree/testing:gtest_main",
         "//runtime/src/iree/vm",
-        "//runtime/src/iree/vm/test:all_bytecode_modules_c",
-        "//runtime/src/iree/vm/test:async_bytecode_modules_c",
-        "//runtime/src/iree/vm/test:async_ops_test_module",
     ],
 )
 
