Adding vm.optimization_barrier and on-demand ordinal analysis. Moves the optimization barrier into the VM dialect so that VM modules are self-contained and don't need to pull in util dialect ops. A new DropOptimizationBarriers pass strips them prior to serialization. OrdinalAnalysis now computes function/global/rodata ordinals on-demand during bytecode emission instead of storing them as attributes on ops. This simplifies the IR and avoids needing to keep attributes in sync.
EmitC has issues but (always has, it's been silently folding for ages).

--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
@@ -55,3 +55,18 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:Support",
     ],
 )
+
+iree_compiler_cc_library(
+    name = "OrdinalAnalysis",
+    srcs = [
+        "OrdinalAnalysis.cpp",
+    ],
+    hdrs = [
+        "OrdinalAnalysis.h",
+    ],
+    deps = [
+        "//compiler/src/iree/compiler/Dialect/Util/IR",
+        "//compiler/src/iree/compiler/Dialect/VM/IR",
+        "@llvm-project//llvm:Support",
+    ],
+)
