--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
@@ -25,6 +25,7 @@ iree_compiler_cc_library(
         "ConvertToYieldableCalls.cpp",
         "DeduplicateRodata.cpp",
         "DropEmptyModuleInitializers.cpp",
+        "DropOptimizationBarriers.cpp",
         "DropUnusedCalls.cpp",
         "GlobalInitialization.cpp",
         "HoistInlinedRodata.cpp",
