[Encoding] Test i1 mask attention with packed_storage (#22756)
Test attention with an `i1` mask using the `packed_storage` encoding
attribute instead of the experimental flag to avoid extending `i1` to
`i8` during compilation.

Currently the test needs to drop the unit extent dimension compared to
the other attention tests due to problems with `FoldUnitExtentDims`.

---------

Signed-off-by: Lukas Sommer <lukas.sommer@amd.com>
Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@gmail.com>

--- a/tests/e2e/linalg_ext_ops/BUILD.bazel
+++ b/tests/e2e/linalg_ext_ops/BUILD.bazel
@@ -17,6 +17,7 @@ ALL_SRCS = enforce_glob(
     [
         "arg_compare.mlir",
         "attention.mlir",
+        "attention_i1_mask_encoding.mlir",
         "gather.mlir",
         "map_scatter.mlir",
         "scan.mlir",
@@ -80,6 +81,7 @@ VMVX_SRCS = enforce_glob(
     exclude = [
         "attention.mlir",
         "attention_i1_mask.mlir",
+        "attention_i1_mask_encoding.mlir",
     ],
 )
 
@@ -106,6 +108,7 @@ LLVM_GPU_SRCS = enforce_glob(
     exclude = [
         "attention.mlir",
         "attention_i1_mask.mlir",
+        "attention_i1_mask_encoding.mlir",
         "map_scatter.mlir",
     ],
 )
@@ -143,6 +146,7 @@ ROCM_HIP_SRCS = enforce_glob(
         "top-k.mlir",
         "attention.mlir",
         "attention_i1_mask.mlir",
+        "attention_i1_mask_encoding.mlir",
     ],
 )
 
@@ -170,6 +174,7 @@ iree_check_single_backend_test_suite(
         exclude = [
             "attention.mlir",
             "attention_i1_mask.mlir",
+            "attention_i1_mask_encoding.mlir",
             "map_scatter.mlir",
             "top-k.mlir",
         ],
@@ -195,6 +200,7 @@ iree_check_single_backend_test_suite(
         exclude = [
             "attention.mlir",
             "attention_i1_mask.mlir",
+            "attention_i1_mask_encoding.mlir",
             "map_scatter.mlir",
             "top-k.mlir",
         ],
