Disable simplify regions after conversion to control flow
Signed-off-by: Nirvedh Meshram <nirvedh@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -114,7 +114,10 @@ iree_compiler_cc_library(
         "GenericVectorization.cpp",
         "HoistStaticallyBoundAllocations.cpp",
         "HoistUnrolledVectorExtractInsertSlice.cpp",
+        "IREECodegenAffineExpandIndexOps.cpp",
         "IREECodegenCanonicalizer.cpp",
+        "IREECodegenFoldMemRefAliasOps.cpp",
+        "IREECodegenLowerAffine.cpp",
         "IREEComprehensiveBufferizePass.cpp",
         "IREEExpandStridedMetadata.cpp",
         "IREEInjectAssumeAlignment.cpp",
