add new pass to flatten allocs right before resolution
Signed-off-by: Muzammiluddin Syed <muzasyed@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -96,6 +96,7 @@ iree_cc_library(
     "FastMathPatterns.cpp"
     "FissionTransferOpsInControlFlow.cpp"
     "FlattenMemRefSubspanPass.cpp"
+    "FlattenSwizzleHintAllocs.cpp"
     "FlattenMemRefs.cpp"
     "FoldAffineMinInDistributedLoops.cpp"
     "FoldSplitReductionAndWorkgroupMappingLoopsPass.cpp"
