--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -175,6 +175,7 @@ iree_cc_library(
     MLIRAMDGPUUtils
     MLIRAffineAnalysis
     MLIRAffineDialect
+    MLIRAffineToStandard
     MLIRAffineTransforms
     MLIRAffineUtils
     MLIRAnalysis
