[GPU][Codegen] Expand iteration space based on new `expand_dims` attribute (#22342)
This patch introduces iteration space expansion for reductions in the
VectorDistribute path.

Specifically, we:

1. Add a new attribute, `expand_dims`, for reductions.
2. Introduce a new pass, `GPUExpandDimensions`, which uses `expand_dims`
to expand the iteration space of relevant dimensions.
3. Refactor common functionality shared between `GPUExpandDimensions`
and `BlockDynamicDimensions` into reusable utilities.
4. Refactor encoding helpers from `EncodingAttrs.cpp` into reusable
utilities.

This change also enables [chain
FMA](https://github.com/iree-org/iree/pull/21855) in matvec codegen as
we iterate along the K reduction dimension.

---
**Performance Summary**

**IREE benchmark module**

* Only expansion: ~4% improvement
* Expansion + chain FMA: ~11% improvement

**rocprof**

* Only expansion: ~13% worse
* Expansion + chain FMA: ~9% better

**Register usage**
* 10% reduction (60 → 54 registers for matvec dispatches)

**Instruction latency (post-reduction loop epilogue)**
* 3.5% improvement (340 → 328 total mean latency)

---

**Notes**

* As a follow-up, we can explore applying iteration space expansion to
the reduction in attention
* Right now, we only expand one dimension into two although the
implementation supports expansion to N dimensions.
* Please note this PR changes the reduction order, so expect some
minor changes to the numerics
* This is does not improve performance by itself/can cause regression
without chain FMA https://github.com/iree-org/iree/pull/21855

Traces for matvec dispatches are attached for all variations (original,
only expansion, and expansion + chain FMA).

[115_expansion_and_chain.tar.gz](https://github.com/user-attachments/files/23268046/115_expansion_and_chain.tar.gz)

[115_nothing.tar.gz](https://github.com/user-attachments/files/23268047/115_nothing.tar.gz)

[115_only_expansion.tar.gz](https://github.com/user-attachments/files/23268048/115_only_

--- a/compiler/src/iree/compiler/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/BUILD.bazel
@@ -34,6 +34,7 @@ iree_compiler_cc_library(
     name = "Utils",
     srcs = [
         "ConversionUtils.cpp",
+        "EncodingUtils.cpp",
         "EquivalenceUtils.cpp",
         "FlatbufferUtils.cpp",
         "Indexing.cpp",
@@ -49,6 +50,7 @@ iree_compiler_cc_library(
     hdrs = [
         "ConversionUtils.h",
         "EmbeddedDataDirectory.h",
+        "EncodingUtils.h",
         "EquivalenceUtils.h",
         "FlatbufferUtils.h",
         "Folding.h",
