SVE workaround: specify vscale for wg count and storage size calculations
Signed-off-by: Ege Beysel <beyselege@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/ExternalInterfaces/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/ExternalInterfaces/CMakeLists.txt
@@ -43,6 +43,7 @@ iree_cc_library(
     iree::compiler::Dialect::Encoding::Utils
     iree::compiler::Dialect::LinalgExt::Utils
     iree::compiler::Dialect::TensorExt::IR
+    iree::compiler::Utils
   PUBLIC
 )
 
