--- a/compiler/src/iree/compiler/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Utils/CMakeLists.txt
@@ -59,6 +59,7 @@ iree_cc_library(
     MLIRSupport
     MLIRTransformUtils
     MLIRTransforms
+    MLIRVectorDialect
     iree::base
     iree::base::internal::flatcc::building
     iree::base::internal::flatcc::debugging
