Adding new linear-scan register allocator. This fixes quite a few issues the prior naive allocator had to enable much more aggressive global reuse and set MOVE bits. The key win here is that we now properly emit bytecode that uses the move semantics to avoid holding on to refs for far longer than we should (sometimes the entire function call). The allocator prefers reuse in order to get the free move behavior (e.g. reusing r0 when it's at end of life) and otherwise leaves the cleanup to the prior inserted discard ops.

--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/test/BUILD.bazel
@@ -16,7 +16,10 @@ iree_lit_test_suite(
     name = "lit",
     srcs = enforce_glob(
         [
+            "live_intervals.mlir",
             "register_allocation.mlir",
+            "register_allocation_ints.mlir",
+            "register_allocation_refs.mlir",
             "value_liveness.mlir",
         ],
         include = ["*.mlir"],
