--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/CMakeLists.txt
@@ -57,6 +57,7 @@ iree_cc_library(
     iree::compiler::Dialect::Util::Conversion::MemRefToUtil
     iree::compiler::Dialect::Util::IR
     iree::compiler::Dialect::Util::Transforms
+    iree::compiler::Dialect::VM::Analysis
     iree::compiler::Dialect::VM::Analysis::ValueLiveness
     iree::compiler::Dialect::VM::Conversion
     iree::compiler::Dialect::VM::Conversion::ArithToVM
