--- a/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Analysis/BUILD.bazel
@@ -15,6 +15,7 @@ package(
 iree_compiler_cc_library(
     name = "Analysis",
     srcs = [
+        "LiveIntervalsTest.cpp",
         "RegisterAllocation.cpp",
         "RegisterAllocationTest.cpp",
         "ValueLivenessTest.cpp",
@@ -26,6 +27,7 @@ iree_compiler_cc_library(
     deps = [
         ":ValueLiveness",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
+        "//compiler/src/iree/compiler/Dialect/VM/Analysis/LinearScan",
         "//compiler/src/iree/compiler/Dialect/VM/IR",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:Analysis",
