Adding Unicode utilities for tokenizer preprocessing.
Adds UTF-8 codec, Unicode category classification, case folding, and
simple NFD decomposition to support BERT-style tokenizer preprocessing.

Features:
- UTF-8 encode/decode with proper validation (overlong, surrogate)
- Unicode General Category lookup (Letter, Mark, Number, etc.)
- White_Space property detection
- Case folding (uppercase/lowercase mappings)
- Simple NFD decomposition for accent stripping

Tables generated from Unicode 15.1.0 Character Database (~124KB). It
changes ~yearly and most ML uses old stuff so I'm not adding the
complexity of fetching the source files and generating this as part of
the build. New updates mostly just add some emoji.

--- a/runtime/src/iree/base/internal/BUILD.bazel
+++ b/runtime/src/iree/base/internal/BUILD.bazel
@@ -336,6 +336,28 @@ iree_runtime_cc_library(
 )
 
 iree_runtime_cc_library(
+    name = "unicode",
+    srcs = [
+        "unicode.c",
+        "unicode_tables.c",
+    ],
+    hdrs = ["unicode.h"],
+    deps = [
+        "//runtime/src/iree/base",
+    ],
+)
+
+iree_runtime_cc_test(
+    name = "unicode_test",
+    srcs = ["unicode_test.cc"],
+    deps = [
+        ":unicode",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
+    ],
+)
+
+iree_runtime_cc_library(
     name = "wait_handle",
     srcs = [
         "wait_handle.c",
